--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,70 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --color-a:#239CCF;
+  --color-b:#3784A5;
+  --color-c:#00AEFA;
+  --color-d:#3D687A;
+  --color-e:#354850;
+  --color-f:#96CAE0;
 }
 
+
+header{
+  display: flex;
+  flex-direction: row;
+  background-color: var(--color-d);
+  max-width: 100vw;
+  
+  justify-content: space-between;
+}
+.App{
+  width: 100vw;
+  height: 100vh;
+  overflow: scroll;
+  background-color: var(--color-f);
+}
+@media (max-width: 768px) {
+  main{
+    margin: auto;
+   
+  
+  }
+  
+}
+@media (min-width: 768px) {
+  main{
+    margin: 4em auto 0 auto;
+    padding: 1em;
+    max-width: 40em;
+
+  }
+
+  
+}
+.main--buttons{
+  margin: auto;
+  width: fit-content;
+}
+.start--button{
+  font-size: 2rem;
+  padding: 0.5em 0.7em;
+  margin-top:5em;
+}
+.auth{
+  padding: 2em 1.5em 2em 1.5em;
+  
+}
+
+header{
+  padding: 0 3em;
+}
+header .auth--buttons{
+  margin:  auto 0;
+  min-width: 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  
+}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -32,33 +92,100 @@
     animation: logo-spin infinite 20s linear;
   }
 }
+@media (min-width: 768px) {
+  .fork{
+    max-width: 30em;
+   min-height: 20em;
+  }
+}
 
+
+.restart{
+  margin-top: 1em;
+}
 .card {
   padding: 2em;
 }
-
+.choice button {
+  font-size: 1.5em;
+  margin: 0 0 0.5em 0;
+}
+.auth .auth--input{
+  padding: 1em;
+  border-radius: 8px;
+  width: 92%;
+  background-color: white;
+  color:var(--color-e);
+  margin:1em auto 1em auto;
+ 
+}
+.create .name{
+  padding: 1em;
+  border-radius: 8px;
+  width: 80%;
+  margin-right: 1em;
+}
+.create{
+  display: flex;
+  flex-direction: row;
+}
 .read-the-docs {
   color: #888;
 }
+/* .fadeOut{
+  opacity:0;
+  width:0;
+  height:0;
+  transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
 
-.fork {
-  display: flex;
-  flex-direction: row;
-  margin:0.5em
 }
-.fork button{
- 
-  margin: auto;
+.fadeIn{
+  opacity:1;
+  width:100px;
+  height:100px;
+  transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+
+} */
+
+
+@keyframes fadeIn{
+  from {opacity:0}
+  to {opacity: 1}
 }
 .choice{
   display: flex;
   flex-direction: row;
-  margin:0.5em
+  style:none;
+}
+.float-in {
+  opacity: 0;
+  animation: float-in 1s ease forwards;
+}
+
+@keyframes float-in {
+  to {
+    opacity: 1;
+    /* transform: translate(-50%); */
+  }
+}
+.task--outer{
+
+}
+
+.choices{
+  min-width: 30em;
+  margin-top: 0;
+  
+  animation: fadeIn;
+  animation-duration: 2s;
+  padding: 3em 1em 1em 1em;
 }
 .task{
-  background-color: darkgreen;
-  padding:1em;
-  max-height: 10em;
-  border-radius: 0.5em;
-  font-size: 2em;
+  color:white;
+  border-radius: 8px;
+  background-color: var(--color-b);
+  font-size: 1.5em;
+  padding: 1em 2em;
+  margin-bottom: 0;
+  
 }
