--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,12 @@
   --color-f:#96CAE0;
 }
 
-
+.error{
+  min-height: 20em;
+}
+.error-text{
+  color:var(--color-e)
+}
 header{
   display: flex;
   flex-direction: row;
@@ -22,6 +27,7 @@ header{
   overflow: scroll;
   background-color: var(--color-f);
 }
+
 @media (max-width: 768px) {
   main{
     margin: auto;
@@ -29,6 +35,12 @@ header{
   
   }
   
+}
+.loading{
+  height:8em;
+  width:20em;
+  border-radius:8px;
+  background-color: var(--color-b);
 }
 @media (min-width: 768px) {
   main{
@@ -46,14 +58,29 @@ header{
 }
 .start--button{
   font-size: 2rem;
+  font-weight: 600;
   padding: 0.5em 0.7em;
-  margin-top:5em;
+  margin:5em auto 1em auto;
+  background-color: var(--color-e);
 }
 .auth{
-  padding: 2em 1.5em 2em 1.5em;
+  padding: 5em 1.5em 2em 1.5em;
   
 }
 
+
+.ease-in {
+  transform: translateY(130%);
+  transition-timing-function: ease-in;
+  transition: 0.2s;
+}
+.ease-out {
+  transition: 0.25s;
+  transition-timing-function: ease-out;
+  
+  transform: translateY(0);
+  opacity: 1;
+}
 header{
   padding: 0 3em;
 }
@@ -100,8 +127,11 @@ header .auth--buttons{
 }
 
 
-.restart{
-  margin-top: 1em;
+.start-over{
+
+  background-color: var(--color-b);
+  font-size: 1.2em;
+  margin: 1em auto;
 }
 .card {
   padding: 2em;
@@ -109,6 +139,7 @@ header .auth--buttons{
 .choice button {
   font-size: 1.5em;
   margin: 0 0 0.5em 0;
+  background-color: #354850;
 }
 .auth .auth--input{
   padding: 1em;
@@ -119,11 +150,29 @@ header .auth--buttons{
   margin:1em auto 1em auto;
  
 }
+.call-to-action{
+  text-align: center;
+  margin-top: 4em;
+  margin-bottom: 4em;
+  color:var(--color-d)
+}
 .create .name{
   padding: 1em;
   border-radius: 8px;
   width: 80%;
   margin-right: 1em;
+}
+.create--button{
+  font-weight: 800;
+  font-size: 1.7em;
+  padding: 0.3em 0.8em;
+  background-color: var(--color-b);
+
+}
+.create--button.disabled{
+  background-color: transparent;
+  border:4px solid var(--color-b)
+  
 }
 .create{
   display: flex;
@@ -132,20 +181,7 @@ header .auth--buttons{
 .read-the-docs {
   color: #888;
 }
-/* .fadeOut{
-  opacity:0;
-  width:0;
-  height:0;
-  transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
 
-}
-.fadeIn{
-  opacity:1;
-  width:100px;
-  height:100px;
-  transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
-
-} */
 
 
 @keyframes fadeIn{
@@ -156,29 +192,39 @@ header .auth--buttons{
   display: flex;
   flex-direction: row;
   style:none;
+  margin: 0.5em;
 }
 .float-in {
   opacity: 0;
-  animation: float-in 1s ease forwards;
+  animation: float-in 4s ease forwards;
 }
 
 @keyframes float-in {
   to {
     opacity: 1;
-    /* transform: translate(-50%); */
+    transform: translate(-50%);
   }
 }
 .task--outer{
 
 }
-
+.render{
+  animation: fadeIn;
+  animation-duration: 2s;
+}
 .choices{
   min-width: 30em;
   margin-top: 0;
-  
-  animation: fadeIn;
-  animation-duration: 2s;
+ 
   padding: 3em 1em 1em 1em;
+}
+.create--input{
+  background-color: var(--color-b);
+}
+.best-self{
+  margin: auto;
+  text-align: center;
+  font-size: 1.2em;
 }
 .task{
   color:white;
