--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,10 @@ header{
   
 }
 .loading{
-  height:8em;
-  width:20em;
+  height:10em;
+  width:30em;
   border-radius:8px;
-  background-color: var(--color-b);
+  
 }
 @media (min-width: 768px) {
   main{
@@ -55,12 +55,14 @@ header{
 .main--buttons{
   margin: auto;
   width: fit-content;
+  
+  text-align: center;
 }
 .start--button{
   font-size: 2rem;
   font-weight: 600;
   padding: 0.5em 0.7em;
-  margin:5em auto 1em auto;
+  margin:3em auto 1em auto;
   background-color: var(--color-e);
 }
 .auth{
@@ -156,11 +158,31 @@ header .auth--buttons{
   margin-bottom: 4em;
   color:var(--color-d)
 }
-.create .name{
+.name{
   padding: 1em;
   border-radius: 8px;
   width: 80%;
   margin-right: 1em;
+  background-color: white;
+  color:var(--color-e);
+  border-color: var(--color-d);
+}
+.create--disabled{
+ display: flex;
+ flex-direction: row;
+}
+.disabled--div{
+  display: flex;
+}
+.disabled--div .disabled--text{
+  align-self: flex-end;
+}
+.disabled--text{
+  margin-left: 1em;
+  font-size: 1.5em;
+  padding: 0;
+  margin-bottom: 0;
+  justify-self: baseline;
 }
 .create--button{
   font-weight: 800;
