--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,30 @@
+
 :root {
   --color-a:#239CCF;
-  --color-b:#3784A5;
-  --color-c:#00AEFA;
+  --color-b:#E0FFF9;
+  --color-c:#1661A7;
   --color-d:#3D687A;
   --color-e:#354850;
-  --color-f:#96CAE0;
-}
+  /* --color-f:#E0FFF9; */
+  --color-f:#F1EDEA;
+  --color-g:#ffffff;
+  --color-h:#60FFB6;
+  --shadow-fork:#354850 0.36;
 
+}
+.bottom{
+  background-color: var(--color-d);
+  padding: 1em 0em 2em 0em;
+  height: 100%;
+  margin: 0;
+}
+button{
+  padding:1em;
+  background-color: var(--color-e);
+  color:white;
+  border-radius: 8px;
+  border-color: transparent;
+}
 .error{
   min-height: 20em;
 }
@@ -18,31 +36,27 @@ header{
   flex-direction: row;
   background-color: var(--color-d);
   max-width: 100vw;
-  
+  color:white;
   justify-content: space-between;
+  font-family: 'Inter', sans-serif;
 }
 .App{
   width: 100vw;
   height: 100vh;
   overflow: scroll;
-  background-color: var(--color-f);
+  background-color: var(--color-b);
+  color:var(--color-c);
+  font-family: 'Inter', sans-serif;
 }
 
-@media (max-width: 768px) {
-  main{
-    margin: auto;
-   
-  
-  }
-  
-}
+
 .loading{
   height:10em;
   width:30em;
   border-radius:8px;
   
 }
-@media (min-width: 768px) {
+@media (min-width: 900px) {
   main{
     margin: 4em auto 0 auto;
     padding: 1em;
@@ -50,7 +64,25 @@ header{
 
   }
 
-  
+  #tree{
+    height: fit-content;
+    overflow: hidden;
+
+}
+.create--div{
+  min-width: 30em;
+  min-height: 20em;
+}
+  .create--form{
+    padding: 3em 2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    min-height: 10em;
+  }
+}
+.tree--format .top{
+  align-items: center;
 }
 .main--buttons{
   margin: auto;
@@ -62,8 +94,10 @@ header{
   font-size: 2rem;
   font-weight: 600;
   padding: 0.5em 0.7em;
+  border-radius: 8px;
+  border-color: transparent;
   margin:3em auto 1em auto;
-  background-color: var(--color-e);
+  background-color: var(--color-a);
 }
 .auth{
   padding: 5em 1.5em 2em 1.5em;
@@ -121,27 +155,26 @@ header .auth--buttons{
     animation: logo-spin infinite 20s linear;
   }
 }
-@media (min-width: 768px) {
-  .fork{
-    max-width: 30em;
-   min-height: 20em;
-  }
-}
 
 
-.start-over{
 
-  background-color: var(--color-b);
+.start--over{  
+  padding: 1em;
+  border-radius: 8px;
+  border-color: transparent;
+  background-color: var(--color-a);
   font-size: 1.2em;
   margin: 1em auto;
 }
 .card {
   padding: 2em;
 }
-.choice button {
+.choice--button {
   font-size: 1.5em;
   margin: 0 0 0.5em 0;
-  background-color: #354850;
+  background-color: var(--color-h);
+  color:var(--color-e)
+  
 }
 .auth .auth--input{
   padding: 1em;
@@ -170,6 +203,8 @@ header .auth--buttons{
 .create--disabled{
  display: flex;
  flex-direction: row;
+ max-width: 30em;
+ margin: auto;
 }
 .disabled--div{
   display: flex;
@@ -181,19 +216,41 @@ header .auth--buttons{
   margin-left: 1em;
   font-size: 1.5em;
   padding: 0;
+
+
+  color:white;
   margin-bottom: 0;
   justify-self: baseline;
+}
+.button--div{
+  max-width: 30em;
+  margin: auto;
 }
 .create--button{
   font-weight: 800;
   font-size: 1.7em;
   padding: 0.3em 0.8em;
-  background-color: var(--color-b);
+  background-color: var(--color-h);
+  color: var(--color-d)
 
+}
+#quizlet--format{
+  width: fit-content;
+  margin: auto;
+}
+.greetings{
+  width: fit-content;
+  max-width: 30em;
+  margin: auto;
+  padding: 2em;
+  min-height:5rem;
+  color: var(--color-d);
+  
 }
 .create--button.disabled{
   background-color: transparent;
-  border:4px solid var(--color-b)
+  border:4px solid var(--color-a);
+  color:var(--color-a)
   
 }
 .create{
@@ -213,8 +270,8 @@ header .auth--buttons{
 .choice{
   display: flex;
   flex-direction: row;
-  style:none;
-  margin: 0.5em;
+  margin: auto;
+  max-width: 30rem;
 }
 .float-in {
   opacity: 0;
@@ -227,17 +284,15 @@ header .auth--buttons{
     transform: translate(-50%);
   }
 }
-.task--outer{
 
-}
 .render{
   animation: fadeIn;
   animation-duration: 2s;
 }
 .choices{
-  min-width: 30em;
-  margin-top: 0;
- 
+
+  width: fit-content;
+  margin: auto;
   padding: 3em 1em 1em 1em;
 }
 .create--input{
@@ -247,13 +302,88 @@ header .auth--buttons{
   margin: auto;
   text-align: center;
   font-size: 1.2em;
+  color:white
 }
 .task{
-  color:white;
-  border-radius: 8px;
-  background-color: var(--color-b);
+  color:var(--color-e);
+  margin: auto;
   font-size: 1.5em;
-  padding: 1em 2em;
+  width: fit-content;
+  max-width: 30em;
+  min-height: 5rem;
+  padding: 2em 2em;
   margin-bottom: 0;
   
+  
+}
+
+
+.fork--branch .caret{
+  margin: auto;
+}
+.fork--branch{
+  display: flex;
+  flex-direction: row;
+  color:black;
+  font-size: 1.4rem;
+  cursor: pointer;
+  color:var(--color-e);
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  list-style-position: outside;
+  text-align: center;
+  margin: 0.2em 0;
+  background-color: var(--color-g);
+  box-shadow: -10px 6px 37px -3px var(--shadow-fork);
+-webkit-box-shadow: -10px 6px 37px -3px var(--shadow-fork);
+-moz-box-shadow: -10px 6px 37px -3px var(--shadow-fork);
+
+
+}
+.fork--branch:hover{
+  background:linear-gradient(var(--color-g),var(--color-g), var(--color-b));
+}
+.branch--text.add{
+  margin-left: 1em;
+}
+
+.fork--span{
+
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+ 
+  
+}
+.fork--branch .branch--add{
+  position: relative;
+  font-size: 1rem;
+  border-radius: 8px;
+  height: fit-content;
+  width: fit-content;
+  margin: auto 1em;
+  padding:0;
+
+}
+.branch--add{
+  color:var(--color-g);
+  background-color: var(--color-c);
+}
+
+.branch--add.disabled{
+  border: 2px solid var(--color-e);
+}
+
+.fork--branch span{
+  display: flex;
+  /* padding-top: 0.9em; */
+  justify-content: start;
+ 
+}
+.ul--branch{
+  position: relative;
+  
+  left: 2em;
+  list-style-type: none;
+  padding: 0;
 }
