--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,11 @@
 .bottom{
   background-color: var(--color-d);
   padding: 1em 0em 2em 0em;
-  height: 100%;
+  height: 100vmax;
   margin: 0;
 }
+
+
 button{
   padding:1em;
   background-color: var(--color-e);
@@ -31,7 +33,7 @@ button{
 .error-text{
   color:var(--color-e)
 }
-header{
+.header{
   display: flex;
   flex-direction: row;
   background-color: var(--color-d);
@@ -117,7 +119,7 @@ header{
   transform: translateY(0);
   opacity: 1;
 }
-header{
+.header{
   padding: 0 3em;
 }
 header .auth--buttons{
@@ -225,6 +227,9 @@ header .auth--buttons{
 .button--div{
   max-width: 30em;
   margin: auto;
+}
+.button--div .create--button{
+  margin-left: 2em;
 }
 .create--button{
   font-weight: 800;
